--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="check-staff">
         <h3><i class="fa-solid fa-check-circle"></i> Checked-In <br />Staff</h3>
-        <h2>0</h2>
+        <h2>{{ staffCheckedInCount }}</h2>
       </div>
       <div class="unr-alerts">
         <h3><i class="fa-solid fa-bell"></i> Unread Alerts</h3>
