--- a/src/app/visitor-dashboard/visitor-dashboard.component.html
+++ b/src/app/visitor-dashboard/visitor-dashboard.component.html
@@ -2,8 +2,8 @@
 <div class="page-container">
   <app-visitor-sidebar></app-visitor-sidebar>
   <div class="dash-main-container">
-    <div class="mini-header">
-      <h3><i class="fa-solid fa-user"></i> Keith Tsikai</h3>
+    <div class="mini-header" style="border: 2px solid green">
+      <h4><i class="fa-solid fa-user"></i> Keith Tsikai</h4>
     </div>
     <div class="status">
       <div class="status-flags">
