--- a/src/styles.css
+++ b/src/styles.css
@@ -61,14 +61,19 @@ header {
   border-radius: 20px;
   flex-direction: row;
   display: flex;
-  padding: 5px;
+  padding: 10px;
   box-sizing: border-box;
   text-align: right;
   width: 16%;
   justify-content: center;
   align-items: center;
   margin-left: 83%;
+  max-width: 32%;
   margin-bottom: 0px;
+}
+
+.mini-header h4 {
+  margin: 0;
 }
 
 .status {
