--- a/src/app/visitor-dashboard/visitor-dashboard.component.html
+++ b/src/app/visitor-dashboard/visitor-dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="page-container">
   <app-visitor-sidebar></app-visitor-sidebar>
   <div class="dash-main-container">
-    <div class="mini-header" style="border: 2px solid green">
+    <div class="mini-header">
       <h4><i class="fa-solid fa-user"></i> Keith Tsikai</h4>
     </div>
     <div class="status">
@@ -31,37 +31,40 @@
         <div class="buttons">
           <div class="pre-registration">
             <button routerLink="/pre-registration">
-              <h4>
-                <i class="fa-solid fa-calendar-plus"></i><br />
-                Pre-Register
-              </h4>
+              <h2><i class="fa-solid fa-calendar-plus"></i></h2>
+              <h4>Pre-Register</h4>
             </button>
           </div>
           <div class="visits">
             <button routerLink="/visits">
-              <h4><i class="fa-solid fa-list-ul"></i><br />Visits</h4>
+              <h2><i class="fa-solid fa-list-ul"></i></h2>
+              <h4>Visits</h4>
             </button>
           </div>
           <div class="flag">
             <button routerLink="/flag-activity">
-              <h4><i class="fa-solid fa-flag"></i><br />Raise Flag</h4>
+              <h2><i class="fa-solid fa-flag"></i></h2>
+              <h4>Raise Flag</h4>
             </button>
           </div>
           <div class="flag-review">
             <button routerLink="/flag-review">
-              <h4>
-                <i class="fa-solid fa-flag-checkered"></i><br />View Flags
-              </h4>
+              <h2>
+                <i class="fa-solid fa-flag-checkered"></i>
+              </h2>
+              <h4>View Flags</h4>
             </button>
           </div>
           <div class="profile">
             <button routerLink="/profile">
-              <h4><i class="fa-solid fa-user"></i><br />Profile</h4>
+              <h2><i class="fa-solid fa-user"></i></h2>
+              <h4>Profile</h4>
             </button>
           </div>
           <div class="alerts">
             <button routerLink="/visitor-view-alerts">
-              <h4><i class="fa-solid fa-bell"></i><br />Alerts</h4>
+              <h2><i class="fa-solid fa-bell"></i></h2>
+              <h4>Alerts</h4>
             </button>
           </div>
         </div>
