--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -32,57 +32,39 @@
     </div>
     <div class="bottom">
       <div class="quick-actions">
-        <h4 style="margin-bottom: 0%; margin-top: 0%">
-          <i class="fa-solid fa-bolt"></i> Quick Actions
-        </h4>
+        <h4><i class="fa-solid fa-bolt"></i> Quick Actions</h4>
         <div class="buttons">
           <button>
-            <h4>
-              <i class="fa-solid fa-users"></i><br />
-              Guest List
-            </h4>
+            <h2><i class="fa-solid fa-users"></i><br /></h2>
+            <h4>Guest List</h4>
           </button>
           <button>
-            <h4>
-              <i class="fa-solid fa-check-double"></i><br />
-              Acknowledge
-            </h4>
+            <h2><i class="fa-solid fa-check-double"></i><br /></h2>
+            <h4>Acknowledge</h4>
           </button>
           <button>
-            <h4>
-              <i class="fa-solid fa-paper-plane"></i><br />
-              Send Alert
-            </h4>
+            <h2><i class="fa-solid fa-paper-plane"></i><br /></h2>
+            <h4>Send Alert</h4>
           </button>
           <button>
-            <h4>
-              <i class="fa-solid fa-flag"></i><br />
-              Raise Flag
-            </h4>
+            <h2><i class="fa-solid fa-flag"></i><br /></h2>
+            <h4>Raise Flag</h4>
           </button>
           <button routerLink="/users">
-            <h4>
-              <i class="fa-solid fa-user-gear"></i><br />
-              Manage Users
-            </h4>
+            <h2><i class="fa-solid fa-user-gear"></i><br /></h2>
+            <h4>Manage <br />Users</h4>
           </button>
           <button>
-            <h4>
-              <i class="fa-solid fa-bell"></i><br />
-              Manage Alerts
-            </h4>
+            <h2><i class="fa-solid fa-bell"></i><br /></h2>
+            <h4>Manage <br />Alerts</h4>
           </button>
           <button>
-            <h4>
-              <i class="fa-solid fa-id-card"></i><br />
-              Manage Visitors
-            </h4>
+            <h2><i class="fa-solid fa-id-card"></i><br /></h2>
+            <h4>Manage <br />Visitors</h4>
           </button>
           <button>
-            <h4>
-              <i class="fa-solid fa-ban"></i><br />
-              Blacklist
-            </h4>
+            <h2><i class="fa-solid fa-ban"></i><br /></h2>
+            <h4>Blacklist</h4>
           </button>
         </div>
       </div>
