--- a/src/app/security-dashboard/security-dashboard.component.html
+++ b/src/app/security-dashboard/security-dashboard.component.html
@@ -38,7 +38,7 @@
               <i class="fa-solid fa-image-portrait"></i>
             </h2>
             <h4>Visitor <br />Check-In</h4></button
-          ><button>
+          ><button routerLink="/checkin-logs">
             <h2><i class="fa fa-sign-out"></i></h2>
             <h4>Check <br />Out</h4></button
           ><button>
