--- a/src/app/visitor-dashboard/visitor-dashboard.component.html
+++ b/src/app/visitor-dashboard/visitor-dashboard.component.html
@@ -14,7 +14,7 @@
         <h3>
           <i class="fa-solid fa-user-plus"></i> Active Pre-registered visits
         </h3>
-        <h2>0</h2>
+        <h2>{{ activeVisitCount }}</h2>
       </div>
       <div class="status-disack">
         <h3><i class="fa-solid fa-user-slash"></i> Disacknowledged visits</h3>
@@ -30,7 +30,7 @@
         <h4><i class="fa-solid fa-bolt"></i> Quick Actions</h4>
         <div class="buttons">
           <div class="pre-registration">
-            <button routerLink="/pre-registration">
+            <button routerLink="/visitor-pre-registration">
               <h2><i class="fa-solid fa-calendar-plus"></i></h2>
               <h4>Pre-Register</h4>
             </button>
