--- a/src/app/flag/flag.component.html
+++ b/src/app/flag/flag.component.html
@@ -1,5 +1,5 @@
-<h1 class="headerh1">Flag Suspicious Activity</h1>
-<p class="headerp">Report any suspicious activity or concerns.</p>
+<h1 class="inheaderh1">Flag Suspicious Activity</h1>
+<p class="inheaderp">Report any suspicious activity or concerns.</p>
 <form id="flagForm" (ngSubmit)="onSubmit()">
   <div class="group">
     <select
