--- a/src/app/staff-dashboard/staff-dashboard.component.html
+++ b/src/app/staff-dashboard/staff-dashboard.component.html
@@ -44,7 +44,7 @@
             <h2><i class="fa-solid fa-paper-plane"></i></h2>
             <h4>Send <br />Alert</h4>
           </button>
-          <button>
+          <button routerLink="/staff-flag">
             <h2><i class="fa-solid fa-flag"></i></h2>
             <h4>Raise <br />Flag</h4>
           </button>
