--- a/src/app/staff-sidebar/staff-sidebar.component.html
+++ b/src/app/staff-sidebar/staff-sidebar.component.html
@@ -35,7 +35,9 @@
         Flags <i class="fa-solid fa-chevron-down"></i>
       </button>
       <div class="dropdown" [ngClass]="{ show: isFlagsOpen }">
-        <a href="#"><i class="fa-solid fa-flag"></i> Raise Flag</a>
+        <a routerLink="/staff-flag"
+          ><i class="fa-solid fa-flag"></i> Raise Flag</a
+        >
         <a href="#"><i class="fa-solid fa-flag-checkered"></i> Raised Flags</a>
       </div>
     </div>
