--- a/src/app/visitor-dashboard/visitor-dashboard.component.html
+++ b/src/app/visitor-dashboard/visitor-dashboard.component.html
@@ -42,7 +42,7 @@
             </button>
           </div>
           <div class="flag">
-            <button routerLink="/flag">
+            <button routerLink="/visitor-flag">
               <h2><i class="fa-solid fa-flag"></i></h2>
               <h4>Raise Flag</h4>
             </button>
