--- a/src/app/visitor-preregistraton/visitor-preregistraton.component.html
+++ b/src/app/visitor-preregistraton/visitor-preregistraton.component.html
@@ -2,8 +2,10 @@
 <div class="page-container">
   <app-visitor-sidebar></app-visitor-sidebar>
   <div class="dash-main-container">
-    <h1>Visitor Pre-Registration Form</h1>
-    <p>Please fill out the form below to pre-register your visit.</p>
+    <h1 class="inheaderh1">Visitor Pre-Registration Form</h1>
+    <p class="inheaderp">
+      Please fill out the form below to pre-register your visit.
+    </p>
     <form id="visitorForm" (ngSubmit)="onSubmit()">
       <div class="group">
         <label for="name">
