--- a/src/app/flag-review/flag-review.component.html
+++ b/src/app/flag-review/flag-review.component.html
@@ -1,5 +1,5 @@
-<h1 class="headerh1">Flag Reviews</h1>
-<p class="headerp">Check the status of your flags or review them</p>
+<h1 class="inheaderh1">Flag Reviews</h1>
+<p class="inheaderp">Check the status of your flags or review them</p>
 <div class="buttons">
   <button class="high-threats" (click)="toggleHigh()">High</button
   ><button class="medium-threats" (click)="toggleMedium()">Medium</button
