--- a/src/app/visitor-sidebar/visitor-sidebar.component.html
+++ b/src/app/visitor-sidebar/visitor-sidebar.component.html
@@ -40,7 +40,7 @@
         <a routerLink="/visitor-flag"
           ><i class="fa-solid fa-flag"></i> Raise Flag</a
         >
-        <a routerLink="/view-flags"
+        <a routerLink="/visitor-flags"
           ><i class="fa-solid fa-flag-checkered"></i> Raised Flags</a
         >
       </div>
