--- a/src/app/visitor-dashboard/visitor-dashboard.component.html
+++ b/src/app/visitor-dashboard/visitor-dashboard.component.html
@@ -10,7 +10,7 @@
     <div class="status">
       <div class="status-flags">
         <h3><i class="fa-solid fa-flag"></i> Pending Flags</h3>
-        <h2>0</h2>
+        <h2>{{ pendingFlagCount }}</h2>
       </div>
       <div class="status-visits">
         <h3>
@@ -58,7 +58,7 @@
             </button>
           </div>
           <div class="profile">
-            <button routerLink="/profile">
+            <button routerLink="/visitor-profile">
               <h2><i class="fa-solid fa-user"></i></h2>
               <h4>Profile</h4>
             </button>
