--- a/src/app/visitor-header/visitor-header.component.html
+++ b/src/app/visitor-header/visitor-header.component.html
@@ -6,7 +6,7 @@
   <nav>
     <ul>
       <li>
-        <a routerLink="/visitormain"><i class="fas fa-home"></i></a>
+        <a routerLink="/visitor-dashboard"><i class="fas fa-home"></i></a>
       </li>
       <li>
         <a class="info-icon"><i class="fa-solid fa-circle-info"></i></a>
@@ -17,7 +17,7 @@
         <i class="fa-solid fa-user"></i>
       </button>
       <div class="dropdown" [ngClass]="{ show: isUserMenuOpen }">
-        <a routerLink="/profile"
+        <a routerLink="/visitor-profile"
           ><i class="fa-solid fa-user-gear"></i> Profile</a
         >
         <a routerLink="/visitor-dashboard"
