--- a/src/app/visitor-preregistraton/visitor-preregistraton.component.html
+++ b/src/app/visitor-preregistraton/visitor-preregistraton.component.html
@@ -40,12 +40,7 @@
             placeholder="Host's Name"
             required
           />
-          <span
-            >Host's Name
-            <b style="font-size: 0.8em; font-weight: lighter"
-              >(Who are you Visiting)</b
-            ></span
-          >
+          <span>Host's Name </span>
         </label>
       </div>
       <div class="group">
@@ -85,7 +80,6 @@
           <option value="Business">Business</option>
           <option value="Meeting">Meeting</option>
           <option value="Delivery">Delivery</option>
-          <option value="Other">Other</option>
         </select>
         <select
           id="estimatedHours"
@@ -97,8 +91,6 @@
           <option value="1-2">1-2 Hours</option>
           <option value="2-3">2-3 Hours</option>
           <option value="3-4">3-4 Hours</option>
-          <option value="4+">4+ Hours</option>
-          <option value="unsure">Unsure</option>
         </select>
       </div>
 
