--- a/src/app/staff-header/staff-header.component.html
+++ b/src/app/staff-header/staff-header.component.html
@@ -17,7 +17,7 @@
         <i class="fa-solid fa-user"></i>
       </button>
       <div class="dropdown" [ngClass]="{ show: isUserMenuOpen }">
-        <a routerLink="/profile"
+        <a routerLink="/staff-profile"
           ><i class="fa-solid fa-user-gear"></i> Profile</a
         >
         <a routerLink="/staff-dashboard"
