--- a/src/app/visitor-dashboard/visitor-dashboard.component.html
+++ b/src/app/visitor-dashboard/visitor-dashboard.component.html
@@ -9,21 +9,31 @@
     </div>
     <div class="status">
       <div class="status-flags">
-        <h3><i class="fa-solid fa-flag"></i> Pending Flags</h3>
+        <h3>
+          <i class="fa-solid fa-flag"></i><br />
+          Pending Flags
+        </h3>
         <h2>{{ pendingFlagCount }}</h2>
       </div>
       <div class="status-visits">
         <h3>
-          <i class="fa-solid fa-user-plus"></i> Active Pre-registered visits
+          <i class="fa-solid fa-user-plus"></i><br />
+          Active <br />Pre-registered visits
         </h3>
         <h2>{{ activeVisitCount }}</h2>
       </div>
       <div class="status-disack">
-        <h3><i class="fa-solid fa-user-slash"></i> Disacknowledged visits</h3>
+        <h3>
+          <i class="fa-solid fa-user-slash"></i><br />
+          Disacknowledged visits
+        </h3>
         <h2>0</h2>
       </div>
       <div class="status-alerts">
-        <h3><i class="fa-solid fa-bell"></i> Unread Alerts</h3>
+        <h3>
+          <i class="fa-solid fa-bell"></i><br />
+          Unread Alerts
+        </h3>
         <h2>0</h2>
       </div>
     </div>
