--- a/src/app/admin-flags/admin-flags.component.html
+++ b/src/app/admin-flags/admin-flags.component.html
@@ -1,1 +1,7 @@
-<p>admin-flags works!</p>
+<app-admin-header></app-admin-header>
+<div class="page-container">
+  <app-admin-sidebar></app-admin-sidebar>
+  <div class="dash-main-container">
+    <app-flag-review></app-flag-review>
+  </div>
+</div>
