--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,16 +1,16 @@
 <header>
-    <div logo>
-      <img src="logo-xpoint-pass.png" alt="logo" class="logo-img" />
-    </div>
-  
-    <nav>
-      <ul>
-        <li>
-          <a><i class="fas fa-home" routerLink="/"></i></a>
-        </li>
-        <li>
-          <a class="info-icon"><i class="fa-solid fa-circle-info"></i></a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <div logo routerLink="/" style="cursor: pointer">
+    <img src="logo-xpoint-pass.png" alt="logo" class="logo-img" />
+  </div>
+
+  <nav>
+    <ul>
+      <li>
+        <a><i class="fas fa-home" routerLink="/"></i></a>
+      </li>
+      <li>
+        <a class="info-icon"><i class="fa-solid fa-circle-info"></i></a>
+      </li>
+    </ul>
+  </nav>
+</header>
