--- a/src/app/main-home/main-home.component.html
+++ b/src/app/main-home/main-home.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="main-container">
     <button routerLink="/visitor-signin">
-      <h2><i class="fa-solid fa-image-portrait"></i></h2>
+      <h2><i class="fa-solid fa-id-card-clip"></i></h2>
       Visitor
       <hr />
       <p>
@@ -16,7 +16,7 @@
       </p>
     </button>
     <button routerLink="/staff-signin">
-      <h2><i class="fa-solid fa-id-card-clip"></i></h2>
+      <h2><i class="fa-solid fa-id-card"></i></h2>
       Staff
       <hr />
       <p>
