--- a/src/styles.css
+++ b/src/styles.css
@@ -30,8 +30,8 @@ header {
 }
 
 .headerh1 {
-  font-size: 2em;
-  margin-top: 52px;
+  font-size: 32px;
+  margin-top: 32px;
   margin-bottom: 0%;
 }
 
