--- a/src/app/admin-flag/admin-flag.component.html
+++ b/src/app/admin-flag/admin-flag.component.html
@@ -1,1 +1,5 @@
-<p>admin-flag works!</p>
+<app-admin-header></app-admin-header>
+<div class="page-container">
+  <app-admin-sidebar></app-admin-sidebar>
+  <div class="dash-main-container"><app-flag></app-flag></div>
+</div>
