--- a/src/app/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin-sidebar/admin-sidebar.component.html
@@ -35,8 +35,12 @@
         Flags <i class="fa-solid fa-chevron-down"></i>
       </button>
       <div class="dropdown" [ngClass]="{ show: isFlagsOpen }">
-        <a href="#"><i class="fa-solid fa-flag"></i> Raise Flag</a>
-        <a href="#"><i class="fa-solid fa-flag-checkered"></i> Raised Flags</a>
+        <a routerLink="/admin-flag"
+          ><i class="fa-solid fa-flag"></i> Raise Flag</a
+        >
+        <a routerLink="/admin-flags"
+          ><i class="fa-solid fa-flag-checkered"></i> Raised Flags</a
+        >
       </div>
     </div>
     <div class="alerts-drop">
