--- a/src/app/visitor-header/visitor-header.component.html
+++ b/src/app/visitor-header/visitor-header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div logo>
+  <div logo routerLink="/visitor-dashboard" style="cursor: pointer">
     <img src="logo-xpoint-pass.png" alt="logo" class="logo-img" />
   </div>
 
